--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ pickle-email-*.html
 ## Environment normalisation:
 /.bundle
 /vendor/bundle
+/vendor/.bin
 
 # these should all be checked in to normalise the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
